--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "cypress": "^3.7.0",
     "hammerjs": "^2.0.8",
     "ng2-file-upload": "^1.4.0",
     "rxjs": "~6.4.0",
